--- a/stockProject.xcodeproj/xcshareddata/xcschemes/Stocker - Dev.xcscheme
+++ b/stockProject.xcodeproj/xcshareddata/xcschemes/Stocker - Dev.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1330"
+   LastUpgradeVersion = "1340"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -28,26 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "291C15982818723000A89846"
-               BuildableName = "stockProjectTests.xctest"
-               BlueprintName = "stockProjectTests"
-               ReferencedContainer = "container:stockProject.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "291C15A22818723000A89846"
-               BuildableName = "stockProjectUITests.xctest"
-               BlueprintName = "stockProjectUITests"
-               ReferencedContainer = "container:stockProject.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -72,18 +52,18 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "base_url"
-            value = "https://stocker-d4d57-default-rtdb.firebaseio.com"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "lists_table"
-            value = "apptLzDZjOI7zQEsT"
+            key = "access_token"
+            value = "VVZHhXJKWgrFAUAuecawkFtQQLxPf5YYuLVwAWJw"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "api_key"
-            value = "keyxy5TxmdGgPFZ2D"
+            value = "AIzaSyC9I-_ALtpL_ospBaAZ11JmEx5VuZMTsiI"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "base_url"
+            value = "https://stocker-d4d57-default-rtdb.firebaseio.com"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
