--- a/stockProject/Info.plist
+++ b/stockProject/Info.plist
@@ -14,6 +14,12 @@
 				<string>stocker</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array/>
+		</dict>
 	</array>
 </dict>
 </plist>
